Bugfix - put quotes around all list values except access-control
Unbound is quite opinionated about certain directives being quoted, others not
quoted.  This is an attempt to make it happy by quoting all values for
directives that can be specified multiple times, with the exception of
access-control.

--- a/unbound/files/unbound.conf.jinja
+++ b/unbound/files/unbound.conf.jinja
@@ -11,7 +11,11 @@ server:
   -#}
   {%- if values is iterable and values is not string and values is not mapping %}
     {%- for value in values %}
+    {%- if key == "access-control" %}
     {{ key }}: {{ value }}
+    {%- else %}
+    {{ key }}: "{{ value }}"
+    {%- endif %}
     {%- endfor %}
   {%- else %}
     {{ key }}: "{{ values }}"
