--- a/unbound/files/unbound.conf.jinja
+++ b/unbound/files/unbound.conf.jinja
@@ -60,3 +60,10 @@ server:
     {%- endfor %}
 {%- endfor %}
 {%- endfor %}
+
+{#-
+    yoyo.org ad block include
+-#}
+{%- if settings['anti_ad'] %}
+include {{ settings.config_dir }}/ad_servers
+{%- endif %}
