--- a/unbound/map.jinja
+++ b/unbound/map.jinja
@@ -6,6 +6,13 @@ Setup variable using grains['os_family'] based logic, only add key:values here
 that differ from whats in defaults.yaml
 ##}
 {% set os_map = salt['grains.filter_by']({
+  'Debian': {
+    'service': 'unbound',
+    'package': 'unbound',
+    'config': '/etc/unbound/unbound.conf',
+    'config_dir': '/etc/unbound/unbound.conf.d',
+    'wheel_group': 'root',
+  },
   'FreeBSD': {
     'service': 'unbound',
     'package': 'unbound',
